Collections to set (java 11)